--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -1632,12 +1632,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "a21701d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivos en el directorio:\n",
+      ".git\n",
+      ".ipynb_checkpoints\n",
+      "100_ejercicios_python.ipynb\n",
+      "libro.png\n",
+      "LICENSE\n",
+      "prueba.txt\n",
+      "README.md\n",
+      "La cantidad de archivos en C:\\Users\\sgcov\\Desktop\\tokio\\libro\\100-Ejercicios-Python- es: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 65\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "def nombreFichero(rutaDirectorio):\n",
+    "    try:\n",
+    "        lista_archivos = os.listdir(rutaDirectorio)\n",
+    "\n",
+    "        cantidad = len(lista_archivos)\n",
+    "\n",
+    "        print(\"Archivos en el directorio:\")\n",
+    "        for archivo in lista_archivos:\n",
+    "            print(archivo)\n",
+    "\n",
+    "        return cantidad\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"El directorio {rutaDirectorio} no se encontró.\")\n",
+    "        return 0 \n",
+    "ruta_del_directorio = \"C:\\\\Users\\\\sgcov\\\\Desktop\\\\tokio\\\\libro\\\\100-Ejercicios-Python-\"\n",
+    "cantidad = nombreFichero(ruta_del_directorio)\n",
+    "print(f\"La cantidad de archivos en {ruta_del_directorio} es: {cantidad}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2acc9b32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce nombre del fichero: prueba_02.txt\n",
+      "Introduce el texo: Este texto es una prueba para el ejercicio 66.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 66\n",
+    "def escribirFiechero(nomFichero,texto):\n",
+    "    # Abre un archivo para escribir (crea uno si no existe)\n",
+    "    with open(nomFichero, 'w') as archivo:\n",
+    "        archivo.write(texto)\n",
+    "if __name__ == '__main__':\n",
+    "    nombre_fichero=input('Introduce nombre del fichero: ')\n",
+    "    texto=input('Introduce el texo: ')\n",
+    "    escribirFiechero(nombre_fichero,texto)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0d7bc602",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 67\n",
+    "def claveMaxValDicc(d):\n",
+    "    return [key for key, val in d.items() if val == max(d.values())]\n",
+    "d2={'asd':[3,4,5,4],'lkj':[4,5,6],'wer':[6,8,76,34,2,1],'oiu':[3,4]}\n",
+    "print(*claveMaxValDicc(d2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "25572713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce valores separados por una ,: 4,5,654,987,123\n",
+      "[4, 5, 654, 987, 123]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 68\n",
+    "lista_usuario=[]\n",
+    "texto=input('Introduce valores separados por una ,: ')\n",
+    "texto=texto.split(',')\n",
+    "for i in texto:\n",
+    "    lista_usuario.append(int(i))\n",
+    "print(lista_usuario)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ec1c6bbb",
+   "id": "fb04607b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 65"
+    "# Ejercicio 69\n"
    ]
   }
  ],
