--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -1752,12 +1752,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "fb04607b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(36, 864)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 69\n",
+    "\n",
+    "def numDiasHoras(fechaInicio, fechaFin):\n",
+    "    fechaInicio = datetime.strptime(fechaInicio, '%Y-%m-%d')\n",
+    "    fechaFin = datetime.strptime(fechaFin, '%Y-%m-%d')\n",
+    "    diferencia = fechaFin -fechaInicio\n",
+    "    dias = diferencia.days\n",
+    "    horas = (dias*24)\n",
+    "    return dias, horas\n",
+    "\n",
+    "resultado = numDiasHoras('2022-05-15', '2022-06-20')\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8b71b1cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ewalkgioea\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 70\n",
+    "import random\n",
+    "def generarContrasena(caracteres,longitud):\n",
+    "    password=''\n",
+    "    while len(password)!=longitud:\n",
+    "        password += random.choice(caracteres)\n",
+    "    print(password)\n",
+    "generarContrasena(['a','g','b','w','k','e','o','i','l'],10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "07e58597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.207106781186548\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 71\n",
+    "import math\n",
+    "\n",
+    "def funTrigo(x):\n",
+    "    return math.cos(x)*math.sin(x)+math.sin(x)+8\n",
+    "a=funTrigo(math.pi/4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "737c5654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 123, 132, 138, 145, 154, 159, 167, 176, 183, 189, 195, 198, 200, 202, 213, 220, 224, 231, 235, 242, 246, 253, 257, 264, 268, 275, 279, 286, 297, 300, 306, 312, 318, 321, 325, 333, 345, 347, 352, 354, 357, 360, 369, 374, 375, 381, 396, 400, 404, 415, 422, 426, 435, 437, 440, 448, 451, 453, 456, 459, 462, 465, 466, 473, 484, 495, 500, 514, 519, 523, 527, 532, 534, 537, 541, 543, 546, 549, 564, 572, 573, 578, 579, 587, 591, 594, 597, 600, 603, 606, 617, 624, 628, 630, 639, 642, 645, 646, 654, 660, 664, 666, 671, 678, 682, 687, 693, 700, 716, 725, 729, 734, 735, 743, 752, 753, 758, 759, 761, 768, 785, 786, 789, 792, 795, 798, 800, 808, 813, 819, 826, 831, 844, 857, 862, 867, 875, 876, 879, 880, 891, 897, 900, 915, 918, 927, 936, 945, 951, 954, 957, 963, 972, 975, 978, 981, 987, 999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 72\n",
+    "L = []\n",
+    "\n",
+    "def filtro(n):\n",
+    "    producto = 1\n",
+    "    digitos = [int(i) for i in str(n) if i!='0']\n",
+    "    for digito in digitos:\n",
+    "        producto *= digito\n",
+    "    suma_digitos = sum(digitos)\n",
+    "    if producto % suma_digitos == 0:\n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "for numero in range(100, 1000):\n",
+    "    if filtro(numero):\n",
+    "        L.append(numero)\n",
+    "    else:\n",
+    "        False\n",
+    "                 \n",
+    "\n",
+    "print(L)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "add653a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 73\n",
+    "def calcularSumaRecursiva(L):\n",
+    "    if not L:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return L[0] + calcularSumaRecursiva(L[1:])\n",
+    "\n",
+    "resultado = calcularSumaRecursiva([3, 2, 6, 9, -1, 5])\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8651231c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 69\n"
+    "# Ejercicio 74"
    ]
   }
  ],
