--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -2036,7 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7744353a",
+   "id": "2e3901aa",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "038f52d0",
+   "id": "c89d8795",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "5e0a163d",
+   "id": "69be4a00",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "970df35d",
+   "id": "9a2ae2f7",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "0b5c3a4d",
+   "id": "3c029d55",
    "metadata": {},
    "outputs": [
     {
@@ -2198,12 +2198,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "604c74b4",
+   "execution_count": 29,
+   "id": "6ed51526",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "669810\n",
+      "63201\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 84\n",
+    "def codigoSuma(numero, p=None):\n",
+    "    if p is None:\n",
+    "        p = numero\n",
+    "    suma = 0\n",
+    "    while numero > 0:\n",
+    "        suma += numero % 10\n",
+    "        numero //= 10\n",
+    "\n",
+    "    if suma > 9:\n",
+    "        return f'{codigoSuma(suma, p)}'\n",
+    "    else:\n",
+    "        return f'{suma}{p}'\n",
+    "\n",
+    "# Ejemplos\n",
+    "print(codigoSuma(69810))\n",
+    "print(codigoSuma(3201))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "39b28ed9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 84\n"
+    "# Ejercicio 85\n",
+    "def busquedadDicotomica(L,elt):\n",
+    "    pass"
    ]
   }
  ],
