--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -2036,7 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2e3901aa",
+   "id": "f3518b16",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c89d8795",
+   "id": "95aaa4bc",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "69be4a00",
+   "id": "069f3090",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9a2ae2f7",
+   "id": "182f198a",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3c029d55",
+   "id": "7b90ad85",
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6ed51526",
+   "id": "fa8c3c71",
    "metadata": {},
    "outputs": [
     {
@@ -2235,13 +2235,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "39b28ed9",
+   "execution_count": 40,
+   "id": "0529f3df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 85\n",
+    "def busquedaDicotomica(L, elt):\n",
+    "    if len(L) == 0:\n",
+    "        return False \n",
+    "    else:\n",
+    "        m = len(L) // 2\n",
+    "        if L[m] == elt:\n",
+    "            return True  \n",
+    "        elif L[m] > elt:\n",
+    "            return busquedaDicotomica(L[:m], elt) \n",
+    "        else:\n",
+    "            return busquedaDicotomica(L[m+1:], elt)  \n",
+    "resultado = busquedaDicotomica([3, 4, 5, 6, 8, 34], 9)\n",
+    "print(resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b42c13f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 200\n",
+      "y: 375\n",
+      "z: 425\n",
+      "Product: 31875000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 86\n",
+    "for x in range(1, 1000):\n",
+    "    for y in range(x, 1000):\n",
+    "        z = 1000 - x - y\n",
+    "        if x**2 + y**2 == z**2 and x<y<z:\n",
+    "            print(\"x:\", x)\n",
+    "            print(\"y:\", y)\n",
+    "            print(\"z:\", z)\n",
+    "            print(\"Product:\", x * y * z)\n",
+    "            break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74f8f754",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio 85\n",
-    "def busquedadDicotomica(L,elt):\n",
+    "# Ejercicio 87\n",
+    "def tratamientoFichero(fichero):\n",
     "    pass"
    ]
   }
