--- a/100_ejercicios_python.ipynb
+++ b/100_ejercicios_python.ipynb
@@ -2036,7 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f3518b16",
+   "id": "cc0d28f1",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "95aaa4bc",
+   "id": "eefd99bc",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "069f3090",
+   "id": "29a11be5",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "182f198a",
+   "id": "b67308c7",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "7b90ad85",
+   "id": "45911c73",
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fa8c3c71",
+   "id": "bb561cd9",
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0529f3df",
+   "id": "86ebaf25",
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b42c13f4",
+   "id": "f10c0456",
    "metadata": {},
    "outputs": [
     {
@@ -2296,14 +2296,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "74f8f754",
+   "execution_count": 49,
+   "id": "f35d8416",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ejercicio 87\n",
     "def tratamientoFichero(fichero):\n",
-    "    pass"
+    "    \n",
+    "    #archivo_entrada = 'prueba_ejercicio87.txt'\n",
+    "    archivo_salida = 'archivo_copia_ejercicio87.txt'\n",
+    "    with open(fichero, 'r') as f_entrada:\n",
+    "        contenido = f_entrada.read()\n",
+    "\n",
+    "    contenido_sin_saltos_de_linea = contenido.replace('\\n', '')\n",
+    "\n",
+    "    with open(archivo_salida, 'w') as f_salida:\n",
+    "        f_salida.write(contenido_sin_saltos_de_linea)\n",
+    "tratamientoFichero('prueba_ejercicio87.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ee8d252f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista ordenada:\n",
+      "[-6, 1, 1, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 88\n",
+    "def ordenamientoAsc(L):\n",
+    "    n = len(L)\n",
+    "    for i in range(n - 1):\n",
+    "        for j in range(0, n - i - 1):\n",
+    "            if L[j] > L[j + 1]:\n",
+    "                L[j], L[j + 1] = L[j + 1], L[j]\n",
+    "\n",
+    "\n",
+    "mi_lista = [6,1,9,-6,1,8,7]\n",
+    "ordenamientoAsc(mi_lista)\n",
+    "\n",
+    "print(\"Lista ordenada:\")\n",
+    "print(mi_lista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "aef8aa73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.166919271354622\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'El resultado del cálculo de IMC indica que la persona tiene sobrepeso o una complexión normal'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ejercicio 89\n",
+    "class Persona:\n",
+    "    def __init__(self, altura, peso, edad):\n",
+    "        self.peso=peso\n",
+    "        self.altura=altura\n",
+    "        self.edad=edad\n",
+    "    def calculoIMC(self):\n",
+    "        return self.peso/self.altura**2\n",
+    "    def interpretacionIMC(self,imc):\n",
+    "        if imc<18.5:\n",
+    "            return 'El resultado del cálculo de IMC indica que la persona tiene bajo peso (delgadez)'\n",
+    "        elif imc>=30:\n",
+    "            return 'El resultado del cálculo de IMC indica que la persona es obesa'\n",
+    "        else:\n",
+    "            return 'El resultado del cálculo de IMC indica que la persona tiene sobrepeso o una complexión normal'\n",
+    "julien = Persona(1.87,95,26)\n",
+    "imc=julien.calculoIMC()\n",
+    "print(imc)\n",
+    "julien.interpretacionIMC(imc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "ae6d6489",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "50\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 90\n",
+    "class Rectangulo:\n",
+    "    def __init__(self,ancho,largo):\n",
+    "        self.ancho=ancho\n",
+    "        self.largo=largo\n",
+    "    def perimetro(self):\n",
+    "        return 2*self.ancho+2*self.largo\n",
+    "    def superficie(self):\n",
+    "        return self.largo*self.ancho\n",
+    "rectangulo1=Rectangulo(10,15)\n",
+    "print(rectangulo1.ancho)\n",
+    "print(rectangulo1.largo)\n",
+    "print(rectangulo1.perimetro())\n",
+    "print(rectangulo1.superficie())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "484a8bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejercicio 91\n"
    ]
   }
  ],
